y.output
Terminals unused in grammar

   ERR


Grammar

    0 $accept: program $end

    1 program: declaration_list init_block

    2 init_block: INIT compound_statement

    3 declaration_list: declaration_list declaration
    4                 | %empty

    5 declaration: var_declaration
    6            | func_declaration

    7 var_declaration: type_specifier ID SCOL
    8                | type_specifier ID LSBR INTCONST RSBR SCOL

    9 type_specifier: INT
   10               | FLOAT
   11               | VOID

   12 func_declaration: type_specifier ID LPBR params RPBR compound_statement

   13 params: param_list
   14       | %empty

   15 param_list: param_list COMMA param
   16           | param

   17 param: type_specifier ID
   18      | type_specifier ID LSBR RSBR

   19 compound_statement: LFBR local_declarations statement_list RFBR

   20 local_declarations: local_declarations var_declaration
   21                   | %empty

   22 statement_list: statement_list statement
   23               | %empty

   24 statement: expression_statement
   25          | compound_statement
   26          | selection_statement
   27          | iteration_statement
   28          | break_statement
   29          | return_statement

   30 expression_statement: expression SCOL
   31                     | SCOL

   32 selection_statement: simple_selection
   33                    | simple_selection ELSE compound_statement

   34 simple_selection: IF LPBR expression RPBR compound_statement
   35                 | simple_selection ELSE IF LPBR expression RPBR compound_statement

   36 iteration_statement: LOOP LPBR expression RPBR statement

   37 break_statement: BREAK SCOL

   38 return_statement: RETURN SCOL
   39                 | RETURN expression SCOL

   40 expression: var ASSGN expression
   41           | simple_expression

   42 var: ID
   43    | ID LSBR expression RSBR

   44 simple_expression: additive_expression relop additive_expression
   45                  | additive_expression

   46 relop: LES
   47      | LEQ
   48      | GRE
   49      | GEQ
   50      | EQL
   51      | NEQ

   52 additive_expression: additive_expression addop term
   53                    | term

   54 addop: ADD
   55      | SUB

   56 term: term mulop factor
   57     | factor

   58 mulop: MUL
   59      | DIV

   60 factor: LPBR expression RPBR
   61       | var
   62       | func_call
   63       | INTCONST
   64       | FLOATCONST

   65 func_call: ID LPBR args RPBR

   66 args: arg_list
   67     | %empty

   68 arg_list: arg_list COMMA expression
   69         | expression


Terminals, with rules where they appear

$end (0) 0
error (256)
INIT (258) 2
ID (259) 7 8 12 17 18 42 43 65
INT (260) 9
FLOAT (261) 10
VOID (262) 11
INTCONST (263) 8 63
FLOATCONST (264) 64
COMMA (265) 15 68
SCOL (266) 7 8 30 31 37 38 39
IF (267) 34 35
ELSE (268) 33 35
LOOP (269) 36
BREAK (270) 37
RETURN (271) 38 39
ASSGN (272) 40
ADD (273) 54
SUB (274) 55
MUL (275) 58
DIV (276) 59
LES (277) 46
LEQ (278) 47
GRE (279) 48
GEQ (280) 49
EQL (281) 50
NEQ (282) 51
LSBR (283) 8 18 43
RSBR (284) 8 18 43
LPBR (285) 12 34 35 36 60 65
RPBR (286) 12 34 35 36 60 65
LFBR (287) 19
RFBR (288) 19
ERR (289)


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
program (36)
    on left: 1, on right: 0
init_block (37)
    on left: 2, on right: 1
declaration_list (38)
    on left: 3 4, on right: 1 3
declaration (39)
    on left: 5 6, on right: 3
var_declaration (40)
    on left: 7 8, on right: 5 20
type_specifier (41)
    on left: 9 10 11, on right: 7 8 12 17 18
func_declaration (42)
    on left: 12, on right: 6
params (43)
    on left: 13 14, on right: 12
param_list (44)
    on left: 15 16, on right: 13 15
param (45)
    on left: 17 18, on right: 15 16
compound_statement (46)
    on left: 19, on right: 2 12 25 33 34 35
local_declarations (47)
    on left: 20 21, on right: 19 20
statement_list (48)
    on left: 22 23, on right: 19 22
statement (49)
    on left: 24 25 26 27 28 29, on right: 22 36
expression_statement (50)
    on left: 30 31, on right: 24
selection_statement (51)
    on left: 32 33, on right: 26
simple_selection (52)
    on left: 34 35, on right: 32 33 35
iteration_statement (53)
    on left: 36, on right: 27
break_statement (54)
    on left: 37, on right: 28
return_statement (55)
    on left: 38 39, on right: 29
expression (56)
    on left: 40 41, on right: 30 34 35 36 39 40 43 60 68 69
var (57)
    on left: 42 43, on right: 40 61
simple_expression (58)
    on left: 44 45, on right: 41
relop (59)
    on left: 46 47 48 49 50 51, on right: 44
additive_expression (60)
    on left: 52 53, on right: 44 45 52
addop (61)
    on left: 54 55, on right: 52
term (62)
    on left: 56 57, on right: 52 53 56
mulop (63)
    on left: 58 59, on right: 56
factor (64)
    on left: 60 61 62 63 64, on right: 56 57
func_call (65)
    on left: 65, on right: 62
args (66)
    on left: 66 67, on right: 65
arg_list (67)
    on left: 68 69, on right: 66 68


State 0

    0 $accept: . program $end

    $default  reduce using rule 4 (declaration_list)

    program           go to state 1
    declaration_list  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: declaration_list . init_block
    3 declaration_list: declaration_list . declaration

    INIT   shift, and go to state 4
    INT    shift, and go to state 5
    FLOAT  shift, and go to state 6
    VOID   shift, and go to state 7

    init_block        go to state 8
    declaration       go to state 9
    var_declaration   go to state 10
    type_specifier    go to state 11
    func_declaration  go to state 12


State 3

    0 $accept: program $end .

    $default  accept


State 4

    2 init_block: INIT . compound_statement

    LFBR  shift, and go to state 13

    compound_statement  go to state 14


State 5

    9 type_specifier: INT .

    $default  reduce using rule 9 (type_specifier)


State 6

   10 type_specifier: FLOAT .

    $default  reduce using rule 10 (type_specifier)


State 7

   11 type_specifier: VOID .

    $default  reduce using rule 11 (type_specifier)


State 8

    1 program: declaration_list init_block .

    $default  reduce using rule 1 (program)


State 9

    3 declaration_list: declaration_list declaration .

    $default  reduce using rule 3 (declaration_list)


State 10

    5 declaration: var_declaration .

    $default  reduce using rule 5 (declaration)


State 11

    7 var_declaration: type_specifier . ID SCOL
    8                | type_specifier . ID LSBR INTCONST RSBR SCOL
   12 func_declaration: type_specifier . ID LPBR params RPBR compound_statement

    ID  shift, and go to state 15


State 12

    6 declaration: func_declaration .

    $default  reduce using rule 6 (declaration)


State 13

   19 compound_statement: LFBR . local_declarations statement_list RFBR

    $default  reduce using rule 21 (local_declarations)

    local_declarations  go to state 16


State 14

    2 init_block: INIT compound_statement .

    $default  reduce using rule 2 (init_block)


State 15

    7 var_declaration: type_specifier ID . SCOL
    8                | type_specifier ID . LSBR INTCONST RSBR SCOL
   12 func_declaration: type_specifier ID . LPBR params RPBR compound_statement

    SCOL  shift, and go to state 17
    LSBR  shift, and go to state 18
    LPBR  shift, and go to state 19


State 16

   19 compound_statement: LFBR local_declarations . statement_list RFBR
   20 local_declarations: local_declarations . var_declaration

    INT    shift, and go to state 5
    FLOAT  shift, and go to state 6
    VOID   shift, and go to state 7

    $default  reduce using rule 23 (statement_list)

    var_declaration  go to state 20
    type_specifier   go to state 21
    statement_list   go to state 22


State 17

    7 var_declaration: type_specifier ID SCOL .

    $default  reduce using rule 7 (var_declaration)


State 18

    8 var_declaration: type_specifier ID LSBR . INTCONST RSBR SCOL

    INTCONST  shift, and go to state 23


State 19

   12 func_declaration: type_specifier ID LPBR . params RPBR compound_statement

    INT    shift, and go to state 5
    FLOAT  shift, and go to state 6
    VOID   shift, and go to state 7

    $default  reduce using rule 14 (params)

    type_specifier  go to state 24
    params          go to state 25
    param_list      go to state 26
    param           go to state 27


State 20

   20 local_declarations: local_declarations var_declaration .

    $default  reduce using rule 20 (local_declarations)


State 21

    7 var_declaration: type_specifier . ID SCOL
    8                | type_specifier . ID LSBR INTCONST RSBR SCOL

    ID  shift, and go to state 28


State 22

   19 compound_statement: LFBR local_declarations statement_list . RFBR
   22 statement_list: statement_list . statement

    ID          shift, and go to state 29
    INTCONST    shift, and go to state 30
    FLOATCONST  shift, and go to state 31
    SCOL        shift, and go to state 32
    IF          shift, and go to state 33
    LOOP        shift, and go to state 34
    BREAK       shift, and go to state 35
    RETURN      shift, and go to state 36
    LPBR        shift, and go to state 37
    LFBR        shift, and go to state 13
    RFBR        shift, and go to state 38

    compound_statement    go to state 39
    statement             go to state 40
    expression_statement  go to state 41
    selection_statement   go to state 42
    simple_selection      go to state 43
    iteration_statement   go to state 44
    break_statement       go to state 45
    return_statement      go to state 46
    expression            go to state 47
    var                   go to state 48
    simple_expression     go to state 49
    additive_expression   go to state 50
    term                  go to state 51
    factor                go to state 52
    func_call             go to state 53


State 23

    8 var_declaration: type_specifier ID LSBR INTCONST . RSBR SCOL

    RSBR  shift, and go to state 54


State 24

   17 param: type_specifier . ID
   18      | type_specifier . ID LSBR RSBR

    ID  shift, and go to state 55


State 25

   12 func_declaration: type_specifier ID LPBR params . RPBR compound_statement

    RPBR  shift, and go to state 56


State 26

   13 params: param_list .
   15 param_list: param_list . COMMA param

    COMMA  shift, and go to state 57

    $default  reduce using rule 13 (params)


State 27

   16 param_list: param .

    $default  reduce using rule 16 (param_list)


State 28

    7 var_declaration: type_specifier ID . SCOL
    8                | type_specifier ID . LSBR INTCONST RSBR SCOL

    SCOL  shift, and go to state 17
    LSBR  shift, and go to state 18


State 29

   42 var: ID .
   43    | ID . LSBR expression RSBR
   65 func_call: ID . LPBR args RPBR

    LSBR  shift, and go to state 58
    LPBR  shift, and go to state 59

    $default  reduce using rule 42 (var)


State 30

   63 factor: INTCONST .

    $default  reduce using rule 63 (factor)


State 31

   64 factor: FLOATCONST .

    $default  reduce using rule 64 (factor)


State 32

   31 expression_statement: SCOL .

    $default  reduce using rule 31 (expression_statement)


State 33

   34 simple_selection: IF . LPBR expression RPBR compound_statement

    LPBR  shift, and go to state 60


State 34

   36 iteration_statement: LOOP . LPBR expression RPBR statement

    LPBR  shift, and go to state 61


State 35

   37 break_statement: BREAK . SCOL

    SCOL  shift, and go to state 62


State 36

   38 return_statement: RETURN . SCOL
   39                 | RETURN . expression SCOL

    ID          shift, and go to state 29
    INTCONST    shift, and go to state 30
    FLOATCONST  shift, and go to state 31
    SCOL        shift, and go to state 63
    LPBR        shift, and go to state 37

    expression           go to state 64
    var                  go to state 48
    simple_expression    go to state 49
    additive_expression  go to state 50
    term                 go to state 51
    factor               go to state 52
    func_call            go to state 53


State 37

   60 factor: LPBR . expression RPBR

    ID          shift, and go to state 29
    INTCONST    shift, and go to state 30
    FLOATCONST  shift, and go to state 31
    LPBR        shift, and go to state 37

    expression           go to state 65
    var                  go to state 48
    simple_expression    go to state 49
    additive_expression  go to state 50
    term                 go to state 51
    factor               go to state 52
    func_call            go to state 53


State 38

   19 compound_statement: LFBR local_declarations statement_list RFBR .

    $default  reduce using rule 19 (compound_statement)


State 39

   25 statement: compound_statement .

    $default  reduce using rule 25 (statement)


State 40

   22 statement_list: statement_list statement .

    $default  reduce using rule 22 (statement_list)


State 41

   24 statement: expression_statement .

    $default  reduce using rule 24 (statement)


State 42

   26 statement: selection_statement .

    $default  reduce using rule 26 (statement)


State 43

   32 selection_statement: simple_selection .
   33                    | simple_selection . ELSE compound_statement
   35 simple_selection: simple_selection . ELSE IF LPBR expression RPBR compound_statement

    ELSE  shift, and go to state 66

    $default  reduce using rule 32 (selection_statement)


State 44

   27 statement: iteration_statement .

    $default  reduce using rule 27 (statement)


State 45

   28 statement: break_statement .

    $default  reduce using rule 28 (statement)


State 46

   29 statement: return_statement .

    $default  reduce using rule 29 (statement)


State 47

   30 expression_statement: expression . SCOL

    SCOL  shift, and go to state 67


State 48

   40 expression: var . ASSGN expression
   61 factor: var .

    ASSGN  shift, and go to state 68

    $default  reduce using rule 61 (factor)


State 49

   41 expression: simple_expression .

    $default  reduce using rule 41 (expression)


State 50

   44 simple_expression: additive_expression . relop additive_expression
   45                  | additive_expression .
   52 additive_expression: additive_expression . addop term

    ADD  shift, and go to state 69
    SUB  shift, and go to state 70
    LES  shift, and go to state 71
    LEQ  shift, and go to state 72
    GRE  shift, and go to state 73
    GEQ  shift, and go to state 74
    EQL  shift, and go to state 75
    NEQ  shift, and go to state 76

    $default  reduce using rule 45 (simple_expression)

    relop  go to state 77
    addop  go to state 78


State 51

   53 additive_expression: term .
   56 term: term . mulop factor

    MUL  shift, and go to state 79
    DIV  shift, and go to state 80

    $default  reduce using rule 53 (additive_expression)

    mulop  go to state 81


State 52

   57 term: factor .

    $default  reduce using rule 57 (term)


State 53

   62 factor: func_call .

    $default  reduce using rule 62 (factor)


State 54

    8 var_declaration: type_specifier ID LSBR INTCONST RSBR . SCOL

    SCOL  shift, and go to state 82


State 55

   17 param: type_specifier ID .
   18      | type_specifier ID . LSBR RSBR

    LSBR  shift, and go to state 83

    $default  reduce using rule 17 (param)


State 56

   12 func_declaration: type_specifier ID LPBR params RPBR . compound_statement

    LFBR  shift, and go to state 13

    compound_statement  go to state 84


State 57

   15 param_list: param_list COMMA . param

    INT    shift, and go to state 5
    FLOAT  shift, and go to state 6
    VOID   shift, and go to state 7

    type_specifier  go to state 24
    param           go to state 85


State 58

   43 var: ID LSBR . expression RSBR

    ID          shift, and go to state 29
    INTCONST    shift, and go to state 30
    FLOATCONST  shift, and go to state 31
    LPBR        shift, and go to state 37

    expression           go to state 86
    var                  go to state 48
    simple_expression    go to state 49
    additive_expression  go to state 50
    term                 go to state 51
    factor               go to state 52
    func_call            go to state 53


State 59

   65 func_call: ID LPBR . args RPBR

    ID          shift, and go to state 29
    INTCONST    shift, and go to state 30
    FLOATCONST  shift, and go to state 31
    LPBR        shift, and go to state 37

    $default  reduce using rule 67 (args)

    expression           go to state 87
    var                  go to state 48
    simple_expression    go to state 49
    additive_expression  go to state 50
    term                 go to state 51
    factor               go to state 52
    func_call            go to state 53
    args                 go to state 88
    arg_list             go to state 89


State 60

   34 simple_selection: IF LPBR . expression RPBR compound_statement

    ID          shift, and go to state 29
    INTCONST    shift, and go to state 30
    FLOATCONST  shift, and go to state 31
    LPBR        shift, and go to state 37

    expression           go to state 90
    var                  go to state 48
    simple_expression    go to state 49
    additive_expression  go to state 50
    term                 go to state 51
    factor               go to state 52
    func_call            go to state 53


State 61

   36 iteration_statement: LOOP LPBR . expression RPBR statement

    ID          shift, and go to state 29
    INTCONST    shift, and go to state 30
    FLOATCONST  shift, and go to state 31
    LPBR        shift, and go to state 37

    expression           go to state 91
    var                  go to state 48
    simple_expression    go to state 49
    additive_expression  go to state 50
    term                 go to state 51
    factor               go to state 52
    func_call            go to state 53


State 62

   37 break_statement: BREAK SCOL .

    $default  reduce using rule 37 (break_statement)


State 63

   38 return_statement: RETURN SCOL .

    $default  reduce using rule 38 (return_statement)


State 64

   39 return_statement: RETURN expression . SCOL

    SCOL  shift, and go to state 92


State 65

   60 factor: LPBR expression . RPBR

    RPBR  shift, and go to state 93


State 66

   33 selection_statement: simple_selection ELSE . compound_statement
   35 simple_selection: simple_selection ELSE . IF LPBR expression RPBR compound_statement

    IF    shift, and go to state 94
    LFBR  shift, and go to state 13

    compound_statement  go to state 95


State 67

   30 expression_statement: expression SCOL .

    $default  reduce using rule 30 (expression_statement)


State 68

   40 expression: var ASSGN . expression

    ID          shift, and go to state 29
    INTCONST    shift, and go to state 30
    FLOATCONST  shift, and go to state 31
    LPBR        shift, and go to state 37

    expression           go to state 96
    var                  go to state 48
    simple_expression    go to state 49
    additive_expression  go to state 50
    term                 go to state 51
    factor               go to state 52
    func_call            go to state 53


State 69

   54 addop: ADD .

    $default  reduce using rule 54 (addop)


State 70

   55 addop: SUB .

    $default  reduce using rule 55 (addop)


State 71

   46 relop: LES .

    $default  reduce using rule 46 (relop)


State 72

   47 relop: LEQ .

    $default  reduce using rule 47 (relop)


State 73

   48 relop: GRE .

    $default  reduce using rule 48 (relop)


State 74

   49 relop: GEQ .

    $default  reduce using rule 49 (relop)


State 75

   50 relop: EQL .

    $default  reduce using rule 50 (relop)


State 76

   51 relop: NEQ .

    $default  reduce using rule 51 (relop)


State 77

   44 simple_expression: additive_expression relop . additive_expression

    ID          shift, and go to state 29
    INTCONST    shift, and go to state 30
    FLOATCONST  shift, and go to state 31
    LPBR        shift, and go to state 37

    var                  go to state 97
    additive_expression  go to state 98
    term                 go to state 51
    factor               go to state 52
    func_call            go to state 53


State 78

   52 additive_expression: additive_expression addop . term

    ID          shift, and go to state 29
    INTCONST    shift, and go to state 30
    FLOATCONST  shift, and go to state 31
    LPBR        shift, and go to state 37

    var        go to state 97
    term       go to state 99
    factor     go to state 52
    func_call  go to state 53


State 79

   58 mulop: MUL .

    $default  reduce using rule 58 (mulop)


State 80

   59 mulop: DIV .

    $default  reduce using rule 59 (mulop)


State 81

   56 term: term mulop . factor

    ID          shift, and go to state 29
    INTCONST    shift, and go to state 30
    FLOATCONST  shift, and go to state 31
    LPBR        shift, and go to state 37

    var        go to state 97
    factor     go to state 100
    func_call  go to state 53


State 82

    8 var_declaration: type_specifier ID LSBR INTCONST RSBR SCOL .

    $default  reduce using rule 8 (var_declaration)


State 83

   18 param: type_specifier ID LSBR . RSBR

    RSBR  shift, and go to state 101


State 84

   12 func_declaration: type_specifier ID LPBR params RPBR compound_statement .

    $default  reduce using rule 12 (func_declaration)


State 85

   15 param_list: param_list COMMA param .

    $default  reduce using rule 15 (param_list)


State 86

   43 var: ID LSBR expression . RSBR

    RSBR  shift, and go to state 102


State 87

   69 arg_list: expression .

    $default  reduce using rule 69 (arg_list)


State 88

   65 func_call: ID LPBR args . RPBR

    RPBR  shift, and go to state 103


State 89

   66 args: arg_list .
   68 arg_list: arg_list . COMMA expression

    COMMA  shift, and go to state 104

    $default  reduce using rule 66 (args)


State 90

   34 simple_selection: IF LPBR expression . RPBR compound_statement

    RPBR  shift, and go to state 105


State 91

   36 iteration_statement: LOOP LPBR expression . RPBR statement

    RPBR  shift, and go to state 106


State 92

   39 return_statement: RETURN expression SCOL .

    $default  reduce using rule 39 (return_statement)


State 93

   60 factor: LPBR expression RPBR .

    $default  reduce using rule 60 (factor)


State 94

   35 simple_selection: simple_selection ELSE IF . LPBR expression RPBR compound_statement

    LPBR  shift, and go to state 107


State 95

   33 selection_statement: simple_selection ELSE compound_statement .

    $default  reduce using rule 33 (selection_statement)


State 96

   40 expression: var ASSGN expression .

    $default  reduce using rule 40 (expression)


State 97

   61 factor: var .

    $default  reduce using rule 61 (factor)


State 98

   44 simple_expression: additive_expression relop additive_expression .
   52 additive_expression: additive_expression . addop term

    ADD  shift, and go to state 69
    SUB  shift, and go to state 70

    $default  reduce using rule 44 (simple_expression)

    addop  go to state 78


State 99

   52 additive_expression: additive_expression addop term .
   56 term: term . mulop factor

    MUL  shift, and go to state 79
    DIV  shift, and go to state 80

    $default  reduce using rule 52 (additive_expression)

    mulop  go to state 81


State 100

   56 term: term mulop factor .

    $default  reduce using rule 56 (term)


State 101

   18 param: type_specifier ID LSBR RSBR .

    $default  reduce using rule 18 (param)


State 102

   43 var: ID LSBR expression RSBR .

    $default  reduce using rule 43 (var)


State 103

   65 func_call: ID LPBR args RPBR .

    $default  reduce using rule 65 (func_call)


State 104

   68 arg_list: arg_list COMMA . expression

    ID          shift, and go to state 29
    INTCONST    shift, and go to state 30
    FLOATCONST  shift, and go to state 31
    LPBR        shift, and go to state 37

    expression           go to state 108
    var                  go to state 48
    simple_expression    go to state 49
    additive_expression  go to state 50
    term                 go to state 51
    factor               go to state 52
    func_call            go to state 53


State 105

   34 simple_selection: IF LPBR expression RPBR . compound_statement

    LFBR  shift, and go to state 13

    compound_statement  go to state 109


State 106

   36 iteration_statement: LOOP LPBR expression RPBR . statement

    ID          shift, and go to state 29
    INTCONST    shift, and go to state 30
    FLOATCONST  shift, and go to state 31
    SCOL        shift, and go to state 32
    IF          shift, and go to state 33
    LOOP        shift, and go to state 34
    BREAK       shift, and go to state 35
    RETURN      shift, and go to state 36
    LPBR        shift, and go to state 37
    LFBR        shift, and go to state 13

    compound_statement    go to state 39
    statement             go to state 110
    expression_statement  go to state 41
    selection_statement   go to state 42
    simple_selection      go to state 43
    iteration_statement   go to state 44
    break_statement       go to state 45
    return_statement      go to state 46
    expression            go to state 47
    var                   go to state 48
    simple_expression     go to state 49
    additive_expression   go to state 50
    term                  go to state 51
    factor                go to state 52
    func_call             go to state 53


State 107

   35 simple_selection: simple_selection ELSE IF LPBR . expression RPBR compound_statement

    ID          shift, and go to state 29
    INTCONST    shift, and go to state 30
    FLOATCONST  shift, and go to state 31
    LPBR        shift, and go to state 37

    expression           go to state 111
    var                  go to state 48
    simple_expression    go to state 49
    additive_expression  go to state 50
    term                 go to state 51
    factor               go to state 52
    func_call            go to state 53


State 108

   68 arg_list: arg_list COMMA expression .

    $default  reduce using rule 68 (arg_list)


State 109

   34 simple_selection: IF LPBR expression RPBR compound_statement .

    $default  reduce using rule 34 (simple_selection)


State 110

   36 iteration_statement: LOOP LPBR expression RPBR statement .

    $default  reduce using rule 36 (iteration_statement)


State 111

   35 simple_selection: simple_selection ELSE IF LPBR expression . RPBR compound_statement

    RPBR  shift, and go to state 112


State 112

   35 simple_selection: simple_selection ELSE IF LPBR expression RPBR . compound_statement

    LFBR  shift, and go to state 13

    compound_statement  go to state 113


State 113

   35 simple_selection: simple_selection ELSE IF LPBR expression RPBR compound_statement .

    $default  reduce using rule 35 (simple_selection)
